--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.0",
+    "joi": "^17.6.0",
     "joi-to-typescript": "^4.0.3",
     "pino-pretty": "^7.6.1",
     "ts-jest": "^28.0.3",
